# rtxsimulator

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: calldata_decoder.rs  decoder.rs  inspector.rs  lib.rs  rpc_simulator.rs  simulator.rs  types.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: release-workflow.md
examples/: test.mjs
scripts/: build-nodejs-npm-package.sh  check-nodejs-npm-package.mjs  prepare-nodejs-npm-package.mjs
