[workspace]
members = ["crates/core", "crates/cli", "crates/wasm"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/kkpsiren/rtxsimulator"
homepage = "https://github.com/kkpsiren/rtxsimulator"

[workspace.dependencies]
rtxsimulator = { path = "crates/core", version = "0.1.2" }
alloy-primitives = "1"
alloy-sol-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
thiserror = "2"

# Native-only
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive", "env"] }

# WASM-only
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[patch.crates-io]
ark-relations = { path = "patches/ark-relations" }
