[package]
name = "rtxsimulator-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for simulating EVM transactions without sending them"

[dependencies]
rtxsimulator.workspace = true
tokio.workspace = true
alloy-primitives.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
